# standout

./: .gitignore  .pre-commit-config.yaml  LICENSE
.github/: pull_request_template.md
backend/: pyproject.toml
be/: .pre-commit-config.yaml
be/standout/app/: main.py
